# course

./: .gitignore  LICENSE  README.md
algorithm/: README.md  problem1.c  problem3.c  problem3.md  problem4.md
algorithm/exercise1/: README.md  answer.md
algorithm/exercise2/: answer.c
algorithm/exercise3/: README.md
algorithm/exercise4/: README.md
algorithm/exercise5/: README.md  answer.md
algorithm/exercise6/: answer.c
algorithm/exercise7/: README.md  answer.c  answer.md
algorithm/exercise8/: README.md  answer.c
bigdata/: README.md
bigdata/homework1/: README.md
bigdata/homework2/: README.md
bigdata/homework3/: .classpath  .project  README.md
bigdata/homework3/input/: file01  file02  file03
bigdata/homework3/src/homework3/: PairsMapper.java  PairsReducer.java  Program.java  StriplesMapper.java  StriplesReducer.java  TextPairWritable.java
bigdata/homework4/: README.md
bigdata/homework5/: README.md  answer.scala
cg/: CMakeLists.txt  README.md
cg/cmake/: FindFreeImage.cmake  FindGLEW.cmake  FindMITK.cmake  FindWindowsSDK.cmake
cg/data/dyncubemap/: hand_10k.ply
cg/homework1/: CMakeLists.txt  homework1.cmake  main.cc
cg/homework2/: homework2.cmake
cg/homework2/picksquare/: picksquare.cc  picksquare.cmake
cg/homework2/sierpinski/: sierpinski.cc  sierpinski.cmake
cg/homework3/: homework3.cmake  sphere.cc  transform.cc
cg/homework4/: homework4.cmake
cg/homework4/cubemap/: dyncubemap.cpp
cg/homework4/mirror/: mirror.cc  mirror.cmake
cg/homework4/spheremap/: spheremap.cpp
cg/include/: camera.h  cpucounter.h  geotypes.h  glinc.h  matrix.h  nvidia_logo.h  quaternion.h  shadow.h  trackball.h  vector.h
cg/mitk/win32/Include/: mitkAnalyzeImageReader.h  mitkAnalyzeImageWriter.h  mitkBinaryFilter.h  mitkCacheVolumeReader.h  mitkCommonIncludes.h  mitkConditionVariable.h  mitkDICOMDIRReader.h  mitkDICOMDIRTree.h  mitkDICOMWriter.h  mitkDiffusionFilter.h  mitkEuclideanDistanceTransformFilter.h  mitkFilter.h  mitkGaussianDerivativeImageFilter.h  mitkGaussianFilter.h  mitkGeometryTypes.h  mitkGlobal.h  mitkHEMesh.h  mitkHEMeshIteratorTemplate.t  mitkHEOoCTriangleMesh.h  mitkHalfEdgeStructures.h  mitkHistogram1D.h  mitkICVolume.h  mitkIM0Writer.h  mitkJPEGReader.h  mitkJPEGWriter.h  mitkList.h  mitkMeshToMeshFilter.h  mitkMeshTransform.h  mitkMetaImageWriter.h  mitkMutex.h  mitkNodeHeap.h  mitkNumberOfProcessors.h  mitkOOCIODelegate.h  mitkOoCGlobalSettings.h  mitkOoCTriangleMesh.h  mitkOoCVolume.h  mitkPLYASCIIWriter.h  mitkPLYBinaryWriter.h  mitkPLYReader.h  mitkPerformanceCounter.h  (+15 more)
cg/mitk/win32/Include/mitk_nl/: mitk_nl_lineareq.h  mitk_nl_polynomial.h  mitk_nl_transform.h  mitk_nl_vector.h
cg/mitk/win32/Lib/: mitkCommon.lib
cg/mitk/win64/Include/: mitkBMPReader.h  mitkBMPWriter.h  mitkCacheVolumeWriter.h  mitkCannyEdgeDetectFilter.h  mitkDICOMInfoReader.h  mitkDICOMReader.h  mitkDICOMStructure.h  mitkDICOMTags.h  mitkDataObject.h  mitkDistanceTransformSaito.h  mitkHEICTriangleMesh.h  mitkHEMeshCirculatorTemplate.t  mitkHETriangleMesh.h  mitkHistogram2D.h  mitkICTriangleMesh.h  mitkIM0Reader.h  mitkImageIOFactory.h  mitkInfoReader.h  mitkMatrix.h  mitkMatrixD.h  mitkMesh.h  mitkMeshReader.h  mitkMeshWriter.h  mitkMetaImageReader.h  mitkNeighborhood.h  mitkNeighborhoodIterator.h  mitkNetCDFImageReader.h  mitkNetCDFImageWriter.h  mitkNeumannBoundary.h  mitkNode.h  mitkObject.h  mitkObserver.h  mitkPlane.h  mitkQEMSimplification.h  mitkQuaternion.h  mitkRCPtr.h  mitkRGBToGrayFilter.h  mitkRawWriter.h  mitkSIMD.h  mitkSIMDConfig.h  (+17 more)
cg/mitk/win64/Include/mitk_nl/: mitk_nl_matrix.h  mitk_nl_matrix_algo.h  mitk_nl_rand.h
cg/mitk/win64/Lib/: mitkCommon.lib
cg/patches/glew/: CMakeLists.txt
cg/src/: curves.cpp  dyncubemap.cpp  gravity.cpp  gravity2.cpp  mandelsimp.cpp  mirror.cpp  nurbscurve.cpp  phongshader.cpp  picksquare.cpp  planet.cpp  sierpinski.cpp  sphere.cpp  spheremap.cpp  surface.cpp  texture2d.cpp  transform.cpp
cg/src/common/: camera.c  matrix.c  shadow.c  trackball.c  vector.c
cg/src/homework1/: README.md  main.c  main.cc
cg/src/homework2/: README.md
cg/src/homework3/: README.md  main.c
cg/src/homework4/: README.md
cg/src/homework5/: README.md
cg/src/shaders/: phong.frag  phong.vert
cv/: .clang-format  CMakeLists.txt  readme.md
cv/homework/: image_io.cc  image_io.h  main.cc  mean_shift.cc  mean_shift.h
nlp/: answer.md
opt/: README.md
opt/assignment/: homework.md
opt/code/: README.md  README_.md  conjugate.py  linear_search.py  plot.py  steepest.py
parallel/: README.md  homework1.md  homework2.md  homework3.md  homework4.md  homework5.md
parallel/src/: Makefile
parallel/src/homework1/: Makefile  homework1.c
parallel/src/homework2/: Makefile
parallel/src/homework2/test1_Pi/: Makefile  pi_cpu.c  pi_loop.c  pi_spmd_final.c  pi_spmd_simple.c
parallel/src/homework2/test2_Fibonacci/: Makefile  linked.c  linked_omp25.c  linked_omp3_tasks.c
parallel/src/homework2/test3_Pi_mc/: Makefile  pi_mc.c  pi_mc_par.c  random.h  random_par.c  random_seq_lcg.c
parallel/src/homework3/: Makefile  cpi.c  mpi_cartesian_topology.c  mpi_dedrived_datatype_continous.c  mpi_dedrived_datatype_index.c  mpi_dedrived_datatype_struct.c  mpi_dedrived_datatype_vector.c  mpi_graph_topology.cpp  mpi_group_communicater.c  mpi_group_reduce_pi.c  mpi_group_scatter.c  mpi_hello.c  mpi_helloBsend.c  mpi_helloNBsend.c  mpi_send_recv.c  mpi_send_recv_nonblocking.c
parallel/src/homework4/: add.c  add.cu  add_block.cu  add_grid.cu
parallel/src/homework5/: .gitignore  CMakeLists.txt
parallel/src/homework5/Convolution/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
parallel/src/homework5/ImageBlur/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
vision/: README.md
vision/assgnment1/: answer.md  knn.ipynb  requirements.txt
vision/assignment1/: README.md  requirements.txt  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
(+13 files in other folders)
